修改百度推送和熊掌号推送功能
修改百度推送和熊掌号推送功能

--- a/xzh.hzshuangmei.com/houtai/templets/archives_add.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/archives_add.htm
@@ -79,7 +79,7 @@ function checkSubmit()
                 <input name="shorttitle" type="text" id="shorttitle" style="width:150px">
             </td>
 <!--主动推送数据 -->
-<td width="120">主动推送到百度：</td>
+<td width="120">主动推送到百度及熊掌号：</td>
 <td><input type='radio' name='push_xzh' value="0" /> 不推送
     <input type='radio' name='push_xzh' value="1"  checked='1'/> 推送</td>
 <!--主动推送数据 -->
