网站熊掌号改造<主页展现等>
网站熊掌号改造<主页展现等>

--- a/xzh.hzshuangmei.com/templets/shuangmei/index_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index_article.htm
@@ -20,6 +20,7 @@
     <!--[if lt IE 9]><script src="{dede:global.cfg_jspath/}/xzh/html5.js"></script><![endif]-->
     <link rel='stylesheet' href='{dede:global.cfg_csspath/}/xzh/nativeShare.css' type='text/css' media='all' />
     <script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/nativeShare.js'></script>
+    <script src="//msite.baidu.com/sdk/c.js?appid=1598778411605158"></script>
 </head>
 
 <body class="post-template-default single single-post postid-738 single-format-standard comment-open list-thumb-hover-action nav-fixed-top">
