--- a/xzh.hzshuangmei.com/templets/shuangmei/list_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_article.htm
@@ -20,6 +20,7 @@
     <meta name="keywords" content="{dede:field name='keywords'/}">
     <meta name="description" content="{dede:field name='description'  function='html2text(@me)'/}">
     <!--[if lt IE 9]><script src="{dede:global.cfg_jspath/}/xzh/html5.js"></script><![endif]-->
+    <script src="//msite.baidu.com/sdk/c.js?appid=1598778411605158"></script>
 </head>
 
 <body class="home blog list-thumb-hover-action nav-fixed-top">
