--- a/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
@@ -17,6 +17,7 @@
     <meta name="description" content="{dede:global.cfg_description/}">
     <!--[if lt IE 9]><script src="{dede:global.cfg_templets_skin/}/js/html5.js"></script><![endif]-->
     <!-- <script language="javascript" type="text/javascript" src="{dede:global.cfg_cmsurl/}/include/dedeajax2.js"></script> -->
+    <script src="//msite.baidu.com/sdk/c.js?appid=1598778411605158"></script>
 </head>
 <body class="home blog list-thumb-hover-action nav-fixed-top">
     {dede:include filename="_head.htm"/}
