修改文章页信息
修改文章页信息

--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -44,11 +44,11 @@
                     <h1 class="article-title">{dede:field.title/}</h1>
                     <div class="article-meta">
                         <span class="item item-1">{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)"/}</span>
-                        <span class="item item-6"></span>
+                        <!-- <span class="item item-6"></span> -->
                         <span class="item item-2">作者：{dede:field.writer/}</span>
                         <span class="item item-3">分类：<a href="{dede:type row=1}[field:typelink /]{/dede:type}" rel="category tag">{dede:field.typename/}</a></span>
-                        <span class="item item-4">阅读({dede:field.click /} )</span>
-                        <span class="item item-5"></span>
+                        <span class="item item-4">阅读({dede:field.click /})</span>
+                        <!-- <span class="item item-5"></span> -->
                     </div>
                 </header>
                 <!--<div class="asst asst-single-header">这是文章内容上的PC端广告位，你可以设置文字、图片和任何广告联盟代码</div>-->
