面包屑导航修改
面包屑导航修改

--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -55,7 +55,7 @@
                 <article class="article-content">
                     {dede:field.body/}
                 </article>
-                <div class="article-copyright">未经允许不得转载：{dede:field name='position'/}<a href="{dede:field name='arcurl'/}">{dede:field.title/}</a></div>
+                <div class="article-copyright">未经允许不得转载：{dede:field name='position'/}><a href="{dede:field name='arcurl'/}">{dede:field.title/}</a></div>
                 <div class="article-tags">
                     <!--[field:id function=GetTags_list(@me)/]-->
                     {dede:tag sort='month'}<a href="[field:link/]" target="_blank" class="hot-tag">[field:tag /]</a>{/dede:tag}
