--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -97,7 +97,7 @@
                         <li>
                             <a href="[field:arcurl/]">
 						<span class="thumbnail">
-						<img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
+						<img src="[field:picname/]" data-src="[field:picname/]" class="thumb" alt="[field:title/]">
 					    </span>[field:title/]
                             </a>
                         </li>
@@ -116,7 +116,7 @@
                     {dede:arclist titlelen="120" row='4' orderby ='pubdate' orderway="desc"}
                     <li><a href="[field:arcurl/]">
 				<span class="thumbnail">
-				<img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
+				<img src="[field:picname/]" data-src="[field:picname/]" class="thumb" alt="[field:title/]">
 			</span>[field:title/]</a></li>
                     {/dede:arclist}
                     {dede:FIELD.typeid function='getCaseArticleCaseXZH(@me)'/}
