--- a/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
@@ -33,7 +33,7 @@
                 {dede:list pagesize="6" titlelen="120" orderby ='pubdate' orderway="desc"}
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
-                    <img src="[field:litpic/]" data-src="[field:litpic/]" class="thumb">
+                    <img src="[field:litpic/]" data-src="[field:litpic/]" class="thumb" alt="[field:title/]">
                 </a>
                     <h2>
                     <a href="[field:arcurl/]"  target="_blank">[field:title/]</a>
