--- a/xzh.hzshuangmei.com/templets/shuangmei/taglist.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/taglist.htm
@@ -36,7 +36,7 @@
                 {dede:list orderby='sortrank' pagesize='10'}
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
-	<img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
+	<img src="[field:picname/]" data-src="[field:picname/]" class="thumb" alt="[field:title/]">
 	</a>
                     <h2>
 	<a href="[field:arcurl/]"  target="_blank">[field:title/]</a>
