--- a/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
@@ -30,7 +30,7 @@
     <section class="container">
         <div class="excerpts-wrapper">
             <div class="excerpts">
-                {dede:list pagesize="6" titlelen="120" orderby ='pubdate' orderway="desc"}
+                {dede:list channelid='84,86'   pagesize='15' orderby='id'}
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
                     <img src="[field:litpic/]" data-src="[field:litpic/]" class="thumb" alt="[field:title/]">
