增加熊掌号关注按钮
增加熊掌号关注按钮

--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -51,7 +51,7 @@
                         <!-- <span class="item item-5"></span> -->
                     </div>
                 </header>
-                <!--<div class="asst asst-single-header">这是文章内容上的PC端广告位，你可以设置文字、图片和任何广告联盟代码</div>-->
+                <div class="asst asst-single-header"><script>cambrian.render('body')</script></div>
                 <article class="article-content">
                     {dede:field.body/}
                 </article>
@@ -131,9 +131,6 @@
     <script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/main.js'></script>
 
 </body>
-<!-- <div style="padding-left: 17px; padding-right: 17px;">
-    <script>cambrian.render('head')</script>
-</div> -->
 </html>
 <script>
 (function(){
