博客网站内容页读取全站最新文章
博客网站内容页读取全站最新文章

--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -124,12 +124,10 @@
             <div class="widget widget-postlist">
                 <h3>最新文章</h3>
                 <ul>
-                    {dede:FIELD.typeid function='getCaseArticleDoctorXZH(@me)'/} {dede:arclist titlelen="120" row='4' orderby ='pubdate' orderway="desc"}
-                    <li><a href="[field:arcurl/]">
-                <span class="thumbnail">
-                <img src="[field:picname/]" data-src="[field:picname/]" class="thumb" alt="[field:title/]">
-            </span>[field:title/]</a></li>
-                    {/dede:arclist} {dede:FIELD.typeid function='getCaseArticleCaseXZH(@me)'/}
+                    {dede:FIELD.typeid function='getCaseArticleDoctorXZH(@me)'/}
+                    <!--{dede:arclist titlelen="120" row='4' orderby ='pubdate' orderway="desc"}    -->
+                       {dede:FIELD.typeid function='getAllDateAriticXZH()'/}
+					{dede:FIELD.typeid function='getCaseArticleCaseXZH(@me)'/}
                 </ul>
             </div>
         </div>
